# rvt-rs

./: .gitignore  CHANGELOG.md  CITATION.cff  CLEANROOM.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Contents.decomp  Formats_Latest.decomp  Global_ContentDocuments.decomp  Global_DocumentIncrementTable.decomp  Global_ElemTable.decomp  Global_History.decomp  Global_Latest.decomp  Global_PartitionTable.decomp  LICENSE  NOTICE  Partitions_0.decomp  Partitions_1.decomp  Partitions_2.decomp  Partitions_3.decomp  Partitions_4.decomp  Partitions_5.decomp  Partitions_51.decomp  Partitions_6.decomp  Partitions_65.decomp  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  THREAT_MODEL.md  TODO.md  cliff.toml  deny.toml  pyproject.toml  pytest.ini  release-please-config.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  corpus_submission.yml  decoder_work.yml  feature_request.md  feature_request.yml  re_finding.md  re_finding.yml
.github/workflows/: changelog.yml  ci.yml  deploy-viewer.yml  fuzz.yml  perf-budget.yml  publish.yml
benches/: basic_file_info.rs  compression.rs  project_file.rs  schema.rs
docs/: benchmarks.md  cfb-structural-layout-2026.md  compatibility.md  container-wire-format-2026-04-21.md  contribution-map.md  corpus-hunt-2026-04-21.md  corpus-sources.md  corpus.md  demos.md  diagnostic-semantics.md  elem-table-record-layout-2026-04-21.md  export-diagnostics.md  extending-layer-5b.md  global-latest-framing-probe-2026-04-21.md  inspect.md  install.md  project-file-corpus-probe-2026-04-21.md  python.md  release-checklist.md  rvt-moat-break-reconnaissance.md  rvt-phase4c-session-2026-04-19.md  rvt-python-quickstart.ipynb  status.md  supply-chain-policy.md  supported-profile.md  user-guide.md  validation-evidence.md  viewer-api.md  viewer-build-pipeline.md  viewer-demos.json  viewer-privacy-posture.md
docs/blog/: 2026-04-21-elem-table.md  2026-04-ifc4-exporter.md  2026-04-schema-discovery.md
docs/data/: bench-2024.csv  bench-2024.md  bench-versions.csv  tag-drift-2016-2026.csv
docs/decisions/: ADR-001-workspace-split-for-pyo3.md  ADR-002-semantic-write-api-gate.md  ADR-003-revit-openability-validation.md
docs/demo/: rvt-analyze-2024-redacted.json  rvt-analyze-2024-redacted.txt  rvt-analyze-2024-teaser.txt
docs/launch/: blog-dwg-rs-coordinate.md  buildingsmart-forum.md  email-phi-ag-corpus-thanks.md  hn-show-hn.md  linkedin-aec.md  osarch-forum.md  reddit-r-rust.md  twitter-x-thread.md
docs/re/: revit-wire-format-landscape-2026-04-21.md
docs/schemas/: README.md  corpus-report.schema.json  element-records.schema.json  export-diagnostics.schema.json  schema-diagnostics.schema.json  summary.schema.json
examples/: adocument_bruteforce.rs  adocument_entry.rs  adocument_walk.rs  adocument_walker_v1.rs  contents_probe.rs  dhat_schema.rs  directory_bytewise_scan.rs  directory_class_lookup.rs  directory_probe.rs  directory_vs_elemtable.rs  elem_table_probe.rs  elem_table_sanity.rs  field_type_probe.rs  flag_word_probe.rs  instance_scan.rs  link_schema.rs  partition_diff.rs  partition_full.rs  partition_invariant.rs  partitions_header_probe.rs  partitions_q7.rs  perf_budget_op.rs  post_directory.rs  post_table_b_density.rs  post_table_b_head.rs  probe_adocument_fields.rs  probe_adocument_trailing_ids.rs  probe_arcwall_2024.rs  probe_arcwall_records.rs  probe_arcwall_trailer.rs  probe_cd_vs_elemtable.rs  probe_cfb_sector_layout.rs  probe_chunk_body_tags.rs  probe_chunk_u0_vs_elemtable.rs  probe_container_bodies.rs  probe_container_kinds.rs  probe_content_documents.rs  probe_content_documents_schema.rs  probe_corpus_batch_validate.rs  probe_elem_record_payload.rs  (+32 more)
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_basic_file_info.rs  fuzz_elem_table.rs  fuzz_find_chunks.rs  fuzz_gzip_header_len.rs  fuzz_inflate_at_with_limits.rs  fuzz_open_bytes.rs  fuzz_parse_schema.rs  fuzz_part_atom.rs  fuzz_step_writer.rs  fuzz_walker_entry_detect.rs
fuzz/src/: lib.rs
python/rvt/: __init__.py  __init__.pyi
reports/element-framing/: RE-01-synthesis.md  RE-09-synthesis.md  RE-11-synthesis.md  RE-13-synthesis.md  RE-14.1-synthesis.md  RE-14.2-synthesis.md  RE-14.3-synthesis.md  RE-17-synthesis.md  RE-18-synthesis.md
rvt-py/: Cargo.toml  README.md
rvt-py/src/: lib.rs
src/: arc_wall_record.rs  basic_file_info.rs  class_index.rs  class_tag_map.rs  compression.rs  corpus.rs  elem_table.rs  error.rs  formats.rs  geometry.rs  lib.rs  object_graph.rs  parse_mode.rs  part_atom.rs  partitions.rs  python.rs  reader.rs  redact.rs  round_trip.rs  streams.rs  walker.rs  wasm.rs  writer.rs
src/elements/: annotations.rs  category.rs  ceiling.rs  circulation.rs  curtain_wall.rs  drafting.rs  family.rs  floor.rs  foundation_and_furnishings.rs  generic.rs  grid.rs  level.rs  mep.rs  mod.rs  openings.rs  parameters.rs  project_organization.rs  reference_planes.rs  reference_points.rs  roof.rs  structural.rs  styling.rs  wall.rs  zones.rs
src/ifc/: annotation.rs  camera.rs  category_map.rs  clipping.rs  entities.rs  from_decoded.rs  gltf.rs  measure.rs  mod.rs  pbr.rs  scene_graph.rs  share.rs  sheet.rs  step_writer.rs
templates/element-decoder/: README.md  cargo-generate.toml
tests/: arc_wall_corpus.rs  cfb_roundtrip_delta.rs  elem_table_corpus.rs  field_type_coverage.rs  fuzz_regressions.rs  gen_fixture_roundtrip.rs  graceful_degradation.rs  ifc_roundtrip.rs  ifc_synthetic_project.rs  ifc_synthetic_structural.rs  json_schema_contracts.rs  project_corpus_smoke.rs  project_count_fixtures.rs  rvt_ifc_diagnostics_cli.rs  rvt_inspect_cli.rs  samples.rs  walker_to_ifc_integration.rs
tests/common/: mod.rs
tests/fixtures/: synthetic-project.ifc  synthetic-structural.ifc
tests/python/: conftest.py  test_rvt.py
tools/: bench.sh  corpus-health.sh  fetch-corpus.sh  perf-budgets.json  perf_budget.py  quality.sh
viewer/: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
(+9 files in other folders)
