[package]
name = "rvt"
version = "0.1.2"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
description = "Apache-2 clean-room toolkit for inspecting Autodesk Revit files (.rvt, .rfa, .rte, .rft) without a Revit installation. Opens the CFB container, decodes streams, parses the embedded schema, and classifies field encodings across 2016-2026. Full per-element extraction + geometry are active research."
authors = ["Griffin Long <151978260+DrunkOnJava@users.noreply.github.com>"]
repository = "https://github.com/DrunkOnJava/rvt-rs"
homepage = "https://github.com/DrunkOnJava/rvt-rs"
documentation = "https://docs.rs/rvt"
readme = "README.md"
keywords = ["revit", "bim", "autodesk", "ifc", "rfa"]
categories = ["parser-implementations", "compression", "command-line-utilities"]
exclude = [
    ".github/*",
    ".gitignore",
    "tools/bench.sh",
    "docs/outreach/*",
    "docs/announcement-draft.md",
    "docs/demo/*",
    "docs/data/*.csv",
]

# The SPDX identifier `Apache-2.0` is set above. The full license text
# is in LICENSE at the crate root.

[features]
# Optional Python bindings via pyo3. Enabled when building the
# `rvt` Python wheel with maturin (`maturin build --features python`).
# Keeps the default Rust lib dependency footprint lean.
python = ["dep:pyo3"]

[dependencies]
# Microsoft Compound File Binary (OLE) container — reads the outer
# wrapper Revit uses for every on-disk file.
cfb = "0.11"
# DEFLATE / raw inflate — for the truncated-gzip streams Revit ships.
flate2 = "1.0"
# UTF-16LE decoder — robust enough to recover from Revit's malformed
# surrogate pairs (encoding_rs doesn't panic where stdlib does).
encoding_rs = "0.8"
# PartAtom XML parser.
quick-xml = { version = "0.36", features = ["serialize"] }
# Serialisation for JSON output + test fixtures.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# CLI argument parsing for every shipped binary.
clap = { version = "4", features = ["derive"] }
# Error ergonomics.
anyhow = "1"
thiserror = "1"
# Optional: Python bindings. `abi3-py38` produces a single wheel
# compatible with every Python >= 3.8, avoiding per-minor-version
# rebuilds. Only pulled in when the `python` feature is enabled.
pyo3 = { version = "0.22", optional = true, features = ["extension-module", "abi3-py38"] }

# Seven shipped binaries. All depend on the `rvt` library crate.

[[bin]]
name = "rvt-analyze"
path = "src/bin/rvt_analyze.rs"

[[bin]]
name = "rvt-info"
path = "src/bin/rvt_info.rs"

[[bin]]
name = "rvt-schema"
path = "src/bin/rvt_schema.rs"

[[bin]]
name = "rvt-history"
path = "src/bin/rvt_history.rs"

[[bin]]
name = "rvt-diff"
path = "src/bin/rvt_diff.rs"

[[bin]]
name = "rvt-corpus"
path = "src/bin/rvt_corpus.rs"

[[bin]]
name = "rvt-dump"
path = "src/bin/rvt_dump.rs"

[[bin]]
name = "rvt-doc"
path = "src/bin/rvt_doc.rs"

[[bin]]
name = "rvt-ifc"
path = "src/bin/rvt_ifc.rs"

[[bin]]
name = "gen-fixture"
path = "src/bin/gen_fixture.rs"

[lib]
name = "rvt"
path = "src/lib.rs"
# `cdylib` builds the Python extension shared object via maturin;
# `rlib` is needed so other Rust crates (tests, examples, the
# binaries in src/bin/) can depend on the library. Both must be
# present for `cargo test --features python` to link correctly.
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
codegen-units = 1
strip = true

# Docs.rs build configuration — see https://docs.rs/about/metadata
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
