[package]
name = "rvt-py"
version = "0.1.2"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
description = "Python bindings for the `rvt` crate — pyo3 extension module behind the `rvt` wheel on PyPI. Kept in a separate crate so `rvt` itself can `#![forbid(unsafe_code)]` unconditionally (SEC-12/13)."
authors = ["Griffin Long <151978260+DrunkOnJava@users.noreply.github.com>"]
repository = "https://github.com/DrunkOnJava/rvt-rs"
homepage = "https://github.com/DrunkOnJava/rvt-rs"
readme = "README.md"
publish = false  # Distributed via PyPI (as the `rvt` wheel), not crates.io.

[lib]
# Must be `cdylib` for pyo3 to produce the Python extension; `rlib`
# is not needed for a pyo3-only consumer.
crate-type = ["cdylib"]

[dependencies]
# Core library — all the real work lives here. Path dependency so the
# workspace can develop both in lock-step; crates.io publishing (if we
# ever re-enable `publish = true`) would swap this for a version pin.
rvt = { path = "..", version = "=0.1.2" }

# Python bindings. `abi3-py38` makes a single wheel compatible with
# every Python >= 3.8. `extension-module` tells pyo3 this build is
# the .so/.pyd extension, not a standalone executable.
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py38"] }

# Used by the Python bindings for JSON serialisation at the FFI
# boundary. Matches the root crate's version so serde derives stay
# compatible.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
